ready for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,23 @@
 # Chrome Driver Settings
 CHROME_DRIVER_PATH=auto
-HEADLESS_MODE=False
+HEADLESS_MODE=True
 
 # Scraping Settings
 TIMEOUT=20
 RETRY_ATTEMPTS=5
+
+# Database Settings
+DATABASE_URL=sqlite:///./events_deals.db
+# For PostgreSQL: postgresql://user:password@localhost/dbname
+# For MySQL: mysql://user:password@localhost/dbname
+
+# API Settings
+API_HOST=0.0.0.0
+API_PORT=8000
+
+# Scheduler Settings
+SCRAPER_SCHEDULE=daily
+# Options: hourly, every_6_hours, every_12_hours, twice_daily, daily
+SCRAPER_MAX_EVENTS=100
+SCRAPER_RUN_ON_STARTUP=False
 
