--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,17 @@ __pycache__/
 venv/
 env/
 *.log
-scraped_data/
+scraped_data/*.json
+!scraped_data/.gitkeep
 chromedriver.exe
 *.csv
-*.json
 .DS_Store
+*.db
+*.sqlite
+*.sqlite3
+debug_page.html
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
